--- a/webrtcapp/views/index.html
+++ b/webrtcapp/views/index.html
@@ -7,10 +7,22 @@
 </head>
 <body>
 	<p>WEBカメラ</p>
-	<video id="video"></video>
+	<div>
+		<video id="video"></video>
+		<button id="startbutton" onclick="takepicture()">Take photo</button>
+	</div>
+	<div>
+		<img id="photo">
+	</div>
+	<canvas id="canvas"></canvas>
+
 	<script>
 
 	const video = document.getElementById("video")
+	const canvas = document.getElementById('canvas');
+	const photo = document.getElementById('photo');
+	const startbutton = document.getElementById('startbutton');
+
 	navigator.mediaDevices.getUserMedia({
 		video: true,
 		audio: false,
@@ -18,8 +30,29 @@
 		video.srcObject = stream;
 		video.play()
 	}).catch(e => {
-	  console.log(e)
+		console.log(e)
 	})
+
+	function clearphoto() {
+		var context = canvas.getContext('2d');
+		context.fillStyle = "#AAA";
+		context.fillRect(0, 0, canvas.width, canvas.height);
+
+		var data = canvas.toDataURL('image/png');
+		photo.setAttribute('src', data);
+	}
+
+	function takepicture() {
+		var context = canvas.getContext('2d');
+		var width = video.videoWidth;
+		var height= video.videoHeight;
+		canvas.width = width;
+		canvas.height = height;
+		context.drawImage(video, 0, 0, width, height);
+
+		var data = canvas.toDataURL('image/png');
+		photo.setAttribute('src', data);
+	}
 </script>
 </body>
 </html>
