--- a/webrtcapp/views/index.html
+++ b/webrtcapp/views/index.html
@@ -14,14 +14,12 @@
 	<div>
 		<img id="photo">
 	</div>
-	<canvas id="canvas"></canvas>
 
 	<script>
 
 	const video = document.getElementById("video")
-	const canvas = document.getElementById('canvas');
 	const photo = document.getElementById('photo');
-	const startbutton = document.getElementById('startbutton');
+	const canvas = document.createElement("canvas");
 
 	navigator.mediaDevices.getUserMedia({
 		video: true,
