--- a/webrtcapp/views/index.html
+++ b/webrtcapp/views/index.html
@@ -9,7 +9,8 @@
 	<p>WEBカメラ</p>
 	<div>
 		<video id="video"></video>
-		<button id="startbutton" onclick="takepicture()">Take photo</button>
+		<button onclick="takepicture()">take photo</button>
+		<button onclick="clearphoto()">clear photo</button>
 	</div>
 	<div>
 		<img id="photo">
