--- a/webrtcapp/views/index.html
+++ b/webrtcapp/views/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>WebRTC</title>
+	<title>WebRTC camera</title>
 </head>
 <body>
 	<p>WEBカメラ</p>
