--- a/webrtcapp/views/rtc.html
+++ b/webrtcapp/views/rtc.html
@@ -7,7 +7,27 @@
 </head>
 <body>
 	<p>RTCDataChannel</p>
+	<div>
+		<button id="connectButton">
+			Connect
+		</button>
+		<button id="disconnectButton" disabled>
+			Disconnect
+		</button>
+	</div>
 
+	<div class="messagebox">
+		<label for="message">
+			Enter a message:
+			<input type="text" name="message" id="message" placeholder="Message text" disabled>
+		</label>
+		<button id="sendButton" disabled>
+			Send
+		</button>
+	</div>
+	<div class="messagebox" id="receivebox">
+		<p>Messages received:</p>
+	</div>
 
 <script>
 </script>
