--- a/webrtcapp/views/rtc.html
+++ b/webrtcapp/views/rtc.html
@@ -30,6 +30,30 @@
 	</div>
 
 <script>
+(function() {
+
+	var connectButton = null;
+	var disconnectButton = null;
+	var sendButton = null;
+	var messageInputBox = null;
+	var receiveBox = null;
+
+	function startup() {
+		connectButton = document.getElementById('connectButton');
+		disconnectButton = document.getElementById('disconnectButton');
+		sendButton = document.getElementById('sendButton');
+		messageInputBox = document.getElementById('message');
+		receiveBox = document.getElementById('receivebox');
+
+		//connectButton.addEventListener('click', connectPeers, false);
+		//disconnectButton.addEventListener('click', disconnectPeers, false);
+		//sendButton.addEventListener('click', sendMessage, false);
+	}
+
+
+
+	window.addEventListener('load', startup, false);
+ })();
 </script>
 </body>
 </html>
