--- a/webrtcapp/views/rtc.html
+++ b/webrtcapp/views/rtc.html
@@ -38,6 +38,9 @@
 	var messageInputBox = null;
 	var receiveBox = null;
 
+	var localConnection = null;
+	var remoteConnection = null;
+
 	function startup() {
 		connectButton = document.getElementById('connectButton');
 		disconnectButton = document.getElementById('disconnectButton');
@@ -45,9 +48,27 @@
 		messageInputBox = document.getElementById('message');
 		receiveBox = document.getElementById('receivebox');
 
-		//connectButton.addEventListener('click', connectPeers, false);
+		connectButton.addEventListener('click', connectPeers, false);
 		//disconnectButton.addEventListener('click', disconnectPeers, false);
 		//sendButton.addEventListener('click', sendMessage, false);
+	}
+
+	function connectPeers() {
+		localConnection = new RTCPeerConnection();
+		sendChannel = localConnection.createDataChannel("sendChannel");
+		sendChannel.onopen = handleSendChannelStatusChange;
+		sendChannel.onclose = handleSendChannelStatusChange;
+
+		remoteConnection = new RTCPeerConnection();
+		remoteConnection.ondatachannel = receiveChannelCallback;
+
+		localConnection.onicecandidate = e => !e.candidate
+			|| remoteConnection.addIceCandidate(e.candidate)
+			.catch(handleAddCandidateError);
+
+		remoteConnection.onicecandidate = e => !e.candidate
+			|| localConnection.addIceCandidate(e.candidate)
+			.catch(handleAddCandidateError);
 	}
 
 
