--- a/webrtcapp/views/peerjs.html
+++ b/webrtcapp/views/peerjs.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
 	<title>WebRTC peerJs</title>
 </head>
 <body>
 	<p>peerJs</p>
-<script>
-</script>
+	<script>
+		var peer = new Peer();
+		console.log(peer);
+	</script>
 </body>
 </html>
