--- a/webrtcapp/views/peerjs.html
+++ b/webrtcapp/views/peerjs.html
@@ -9,11 +9,27 @@
 <body>
 	<p>peerJs</p>
 	<!-- TODO: https://peerjs.com/docs.html#start -->
+	<div>
+		My peer ID is: <span id="myPeerId"></span>
+	</div>
+
+	<div>
+		<button id="connectButton">
+			Connect
+		</button>
+		<button id="disconnectButton" disabled>
+			Disconnect
+		</button>
+	</div>
+
+
+
 	<script>
 		var peer = new Peer();
 
 		peer.on('open', function(id) {
-			console.log('My peer ID is: ' + id);
+			var myPeerId = document.getElementById('myPeerId');
+			myPeerId.innerHTML = id;
 		});
 	</script>
 </body>
