--- a/webrtcapp/views/peerjs.html
+++ b/webrtcapp/views/peerjs.html
@@ -66,15 +66,15 @@
 		},
 		methods: {
 			connectPeer: function(){
-				var connect = this.peer.connect(this.connectToPeerId);
-				connect.on('open', function() {
+				this.connect = this.peer.connect(this.connectToPeerId);
+				this.connect.on('open', function() {
 					app.uiState.showConnectButton = false;
 					app.uiState.showDisconnectButton = true;
 					app.uiState.showMessage = true;
 
 					var message = 'Hello World!';
 					app.sendMessageList.push({body: message});
-					connect.send({
+					app.connect.send({
 						string : message,
 						number : 1
 					});
