--- a/webrtcapp/views/call.html
+++ b/webrtcapp/views/call.html
@@ -4,11 +4,23 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>WebRTC peerJs MediaConnection</title>
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-
-
+	<div id="app">
+		<h1>peerJs MediaConnection</h1>
+	</div>
 	<script>
+		var app = new Vue({
+			el: '#app',
+			data: {
+			},
+			mounted: function () {
+				alert('add vue');
+			},
+			methods: {
+			}
+		})
 	</script>
 </body>
 </html>
