--- a/webrtcapp/views/call.html
+++ b/webrtcapp/views/call.html
@@ -4,19 +4,28 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>WebRTC peerJs MediaConnection</title>
+	<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
 	<div id="app">
 		<h1>peerJs MediaConnection</h1>
+		<div>
+			My peer ID is: {{ myPeerId }}
+		</div>
 	</div>
 	<script>
 		var app = new Vue({
 			el: '#app',
 			data: {
+				myPeerId: '',
+				peer: null,
 			},
 			mounted: function () {
-				alert('add vue');
+				this.peer = new Peer();
+				this.peer.on('open', function(id) {
+					app.myPeerId = id;
+				});
 			},
 			methods: {
 			}
