--- a/webrtcapp/views/chat.html
+++ b/webrtcapp/views/chat.html
@@ -61,7 +61,7 @@
 			</div>
 		</section>
 
-
+		<!-- TODO: 以下の調整 -->
 		<div v-show="uiState.showMessage">
 			<div>
 				<input type="text" v-model="sendMessage">
