--- a/webrtcapp/views/chat.html
+++ b/webrtcapp/views/chat.html
@@ -54,7 +54,7 @@
 					<form v-show="uiState.showConnectButton">
 						<div class="mb-3">
 							<div class="input-group">
-								<div class="input-group-text">connect to peer ID is: </div>
+								<div class="input-group-text">connect peer ID is: </div>
 								<input type="text" class="form-control" v-model="connectToPeerId">
 								<button type="button" class="btn btn-primary" @click="connectPeer">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
