--- a/webrtcapp/views/chat.html
+++ b/webrtcapp/views/chat.html
@@ -42,7 +42,7 @@
 				<div class="col-lg-6 col-md-12 mx-auto">
 					<h1 class="fw-light">chat for peerjs</h1>
 					<p class="lead">My peer ID is: {{ myPeerId }}</p>
-					<div v-show="uiState.showMessage" class="row">
+					<div v-show="uiState.connected" class="row">
 						<div class="col-md-10">
 							<p class="lead">connect peer ID is: {{ connectToPeerId }}</p>
 						</div>
@@ -64,7 +64,7 @@
 							</div>
 						</div>
 					</form>
-					<form v-show="uiState.showMessage">
+					<form v-show="uiState.connected">
 						<div class="mb-3">
 							<textarea id="sendMessage" class="form-control" rows="3" v-model="sendMessage" placeholder="message"></textarea>
 						</div>
@@ -77,7 +77,7 @@
 		</section>
 
 		<!-- TODO: 以下の調整 -->
-		<div v-show="uiState.showMessage">
+		<div v-show="uiState.connected">
 			<div>
 				<h2>送信メッセージ</h2>
 				<p v-for="sendMessage in sendMessageList">{{ sendMessage.body }}</p>
@@ -96,7 +96,7 @@
 		data: {
 			uiState: {
 				showConnectForm: true,
-				showMessage: false,
+				connected: false,
 			},
 			myPeerId: '',
 			connectToPeerId: '',
@@ -115,7 +115,7 @@
 				app.connect = conn;
 				// 接続できたら場合のUI表示
 				app.uiState.showConnectForm = false;
-				app.uiState.showMessage = true;
+				app.uiState.connected = true;
 
 				conn.on('data',function(data) {//メッセージを受け取った時に受信一覧に追加
 					app.receveMessageList.push({body: data});
@@ -132,7 +132,7 @@
 				this.connect.on('open', function() {//送信側
 					// 接続できたら場合のUI表示
 					app.uiState.showConnectForm = false;
-					app.uiState.showMessage = true;
+					app.uiState.connected = true;
 
 					app.connect.on('data', function(data) {//メッセージを受け取った時に受信一覧に追加
 						app.receveMessageList.push({body: data});
