--- a/webrtcapp/views/chat.html
+++ b/webrtcapp/views/chat.html
@@ -122,6 +122,7 @@
 				});
 				conn.on('close', function() {
 					app.uiState.showConnectForm = true;
+					app.uiState.connected = false;
 				});
 			});
 
