fix close button

--- a/webrtcapp/views/chat.html
+++ b/webrtcapp/views/chat.html
@@ -65,7 +65,7 @@
 						</div>
 						<div class="row">
 							<button type="button" class="btn btn-primary col-md-10" @click="sendMessageToPeer">send</button>
-							<button type="button" class="btn btn-default col-md-2" @click="closeConnect">close</button>
+							<button type="button" class="btn btn-light col-md-2" @click="closeConnect">close</button>
 						</div>
 					</form>
 				</div>
